Now any type of selection box content can be dynamically made.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -49,8 +49,8 @@ GridEnabled=False
 LastLevel=/Game/Level/MainMenu
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.17-20.38.49
-CoopGame.LastCompileMethod=Runtime
+CoopGame.TimeStamp=2020.05.17-20.43.26
+CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
 RSA.TimeStamp=2019.12.20-23.26.56
@@ -5161,13 +5161,25 @@ WrapBox.Localization=True
 WBP_LevelSelectionButton_C.Designer=True
 WBP_LevelSelectionButton_C.Default=True
 ScrollBox.Events=True
+WBP_ContentSelectionButton_C.Default=True
+WBP_ContentSelectionButton_C.Appearance=True
+WBP_ContentSelectionButton_C.Designer=True
+WBP_ContentSelectionButton_C.Input=True
+WBP_ContentSelectionButton_C.Interaction=True
+WBP_ContentSelectionButton_C.Performance=True
+WBP_ContentSelectionButton_C.Layout=True
+WBP_ContentSelectionButton_C.Behavior=True
+WBP_ContentSelectionButton_C.Render Transform=True
+WBP_ContentSelectionButton_C.Clipping=True
+WBP_ContentSelectionButton_C.Navigation=True
+WBP_ContentSelectionButton_C.Localization=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/UI/WBP_ContentSelectionButton.WBP_ContentSelectionButton
 OpenAssetsAtExit=/Game/UI/WBP_LevelSelectionBox.WBP_LevelSelectionBox
 OpenAssetsAtExit=/Game/UI/WBP_LevelSelectMenu.WBP_LevelSelectMenu
-OpenAssetsAtExit=/Game/UI/WBP_ContentSelectionButton.WBP_ContentSelectionButton
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -5371,10 +5383,11 @@ WBP_LevelSelectionBox_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C
 StrProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 WBP_ContentSelectionBox_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 WBP_ContentSelectionButton_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
+SContentSelectionBoxWidget=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[4]\" "
-Object=
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 BP_PlayerPawn_C="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -5400,8 +5413,8 @@ ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Co
 ParticleModule="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" "
 ParticleSystem="\"Object.Materials.NamedMaterialSlots\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 StaticMeshActor=
 BP_RifleCameraRecoil_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
 CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.RotOscillation.Roll\" \"Object.Oscillation.FOVOscillation\" "
@@ -5422,7 +5435,7 @@ PhysicsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\"
 Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 WBP_HealthIndicator_C="\"Object.Appearance.ColorAndOpacity\" "
-UserWidget=
+UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 BP_ExplosiveBarrel_C=
 SExplosiveBarrel=
 REINST_BP_ExplosiveBarrel_C_33=
@@ -5561,6 +5574,7 @@ WBP_LevelSelectionBox_C=
 SLevelSelectionBoxWidget=
 WrapBox="\"Object.Render Transform.RenderTransform\" "
 ScrollBox="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.LeftShadowBrush\" \"Object.Style.WidgetBarStyle\" \"Object.Render Transform.RenderTransform\" "
+WBP_ContentSelectionButton_C=
 
 [PlacementMode]
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
@@ -5585,26 +5599,26 @@ RecentlyPlaced=/Script/Engine.SphereReflectionCapture;/Engine/Transient.ActorFac
 RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/WBP_LevelSelectionButton
-MRUItem1=/Game/UI/WBP_LevelSelectMenu
-MRUItem2=/Game/UI/WBP_LevelSelectionBox
-MRUItem3=/Game/Level/MainMenu
-MRUItem4=/Game/GameModes/BP_TestGameMode
-MRUItem5=/Game/Level/maps/MainMenu
-MRUItem6=/Game/Level/maps/FloatingIsland
-MRUItem7=/Game/Level/maps/Wimbledon
-MRUItem8=/Game/Level/maps/Blockout
-MRUItem9=/Game/Level/maps/VoidMap
-MRUItem10=/Game/Level/maps/Blockout_P
-MRUItem11=/Game/Level/maps/TestMap
-MRUItem12=/Game/UI/WBP_MainMenu
-MRUItem13=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
-MRUItem14=/Game/Objects/TrackerBot/BP_TrackerBot
-MRUItem15=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
-MRUItem16=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
-MRUItem17=/Game/Objects/Characters/BP_PlayerPawn
-MRUItem18=/Game/Objects/Projectiles/BP_GrenadeProjectile
-MRUItem19=/Game/Objects/Weapons/BP_Shotgun
+MRUItem0=/Game/UI/WBP_LevelSelectMenu
+MRUItem1=/Game/UI/WBP_LevelSelectionBox
+MRUItem2=/Game/UI/WBP_ContentSelectionButton
+MRUItem3=/Game/UI/WBP_LevelSelectionButton
+MRUItem4=/Game/Level/MainMenu
+MRUItem5=/Game/GameModes/BP_TestGameMode
+MRUItem6=/Game/Level/maps/MainMenu
+MRUItem7=/Game/Level/maps/FloatingIsland
+MRUItem8=/Game/Level/maps/Wimbledon
+MRUItem9=/Game/Level/maps/Blockout
+MRUItem10=/Game/Level/maps/VoidMap
+MRUItem11=/Game/Level/maps/Blockout_P
+MRUItem12=/Game/Level/maps/TestMap
+MRUItem13=/Game/UI/WBP_MainMenu
+MRUItem14=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
+MRUItem15=/Game/Objects/TrackerBot/BP_TrackerBot
+MRUItem16=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
+MRUItem17=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
+MRUItem18=/Game/Objects/Characters/BP_PlayerPawn
+MRUItem19=/Game/Objects/Projectiles/BP_GrenadeProjectile
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -5811,6 +5825,7 @@ bUseUnsortedMenus=False
 Warning_CompileErrorsInMaterial=False
 Warning_NoPreviewMeshFound=False
 ExtrudeCoordsWarning=False
+ChangeVariableType_Warning=False
 
 [MaterialEditor]
 PrimType=1
