Created a widget function to populate future boxes.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -5173,13 +5173,32 @@ WBP_ContentSelectionButton_C.Render Transform=True
 WBP_ContentSelectionButton_C.Clipping=True
 WBP_ContentSelectionButton_C.Navigation=True
 WBP_ContentSelectionButton_C.Localization=True
+WBP_ContentSelectionBox_C.Appearance=True
+WBP_ContentSelectionBox_C.Designer=True
+WBP_ContentSelectionBox_C.Input=True
+WBP_ContentSelectionBox_C.Interaction=True
+WBP_ContentSelectionBox_C.Performance=True
+WBP_ContentSelectionBox_C.Layout=True
+WBP_ContentSelectionBox_C.Behavior=True
+WBP_ContentSelectionBox_C.Render Transform=True
+WBP_ContentSelectionBox_C.Clipping=True
+WBP_ContentSelectionBox_C.Navigation=True
+WBP_ContentSelectionBox_C.Localization=True
+NewBlueprint_C.Appearance=True
+NewBlueprint_C.Interaction=True
+NewBlueprint_C.Behavior=True
+NewBlueprint_C.Render Transform=True
+NewBlueprint_C.Clipping=True
+NewBlueprint_C.Navigation=True
+NewBlueprint_C.Localization=True
+ArrayProperty.Variable=True
+ArrayProperty.DefaultValueCategory=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/UI/WBP_ContentSelectionButton.WBP_ContentSelectionButton
 OpenAssetsAtExit=/Game/UI/WBP_LevelSelectionBox.WBP_LevelSelectionBox
-OpenAssetsAtExit=/Game/UI/WBP_LevelSelectMenu.WBP_LevelSelectMenu
+OpenAssetsAtExit=/Game/UI/WBP_ContentSelectionButton.WBP_ContentSelectionButton
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -5384,6 +5403,9 @@ StrProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.T
 WBP_ContentSelectionBox_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 WBP_ContentSelectionButton_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 SContentSelectionBoxWidget=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
+PopulateBox=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
+ArrayProperty=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
+PopulateBox_3=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Rendering.TextureStreaming,BP_PlayerPawn_C.Rendering.LOD,BP_PlayerPawn_C.Collision.Collision,BP_TrackerBot_C.Physics.ConstraintsGroup,BP_TrackerBot_C.Rendering.TextureStreaming,BP_TrackerBot_C.Rendering.LOD,BP_TrackerBot_C.Collision.Collision,
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[4]\" "
@@ -5482,7 +5504,7 @@ SSuperSpeedPowerup="\"Object.Components.mesh\" \"Object.Components.mesh.Object.S
 REINST_BP_SuperSpeedPowerup2_C_51="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 REINST_BP_SuperSpeedPowerup2_C_55="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 REINST_BP_SuperSpeedPowerup2_C_59="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
-NewBlueprint_C=
+NewBlueprint_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 REINST_NewBlueprint_C_42="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 NewBlueprint1_C="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
 REINST_BP_SuperSpeedPowerup2_C_46="\"Object.Components.mesh\" \"Object.Components.mesh.Object.StaticMesh\" \"Object.Components.mesh.Object.Rendering\" \"Object.Components.mesh.Object.Lighting\" \"Object.Components.pointLight\" \"Object.Components.pointLight.Object.Light.LightColor\" "
@@ -5564,7 +5586,7 @@ REINST_BP_PlayerPawn_C_103="\"Object.Components.camera.Object.PostProcess.PostPr
 REINST_BP_PlayerPawn_C_109="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.LeftShadowBrush\" \"Object.Style.WidgetBarStyle\" \"Object.Render Transform.RenderTransform\" "
 WBP_MainMenu_C="\"Object.Appearance.ColorAndOpacity\" "
 WBP_LevelSelectMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 WBP_LevelSelectionButton_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
@@ -5574,7 +5596,9 @@ WBP_LevelSelectionBox_C=
 SLevelSelectionBoxWidget=
 WrapBox="\"Object.Render Transform.RenderTransform\" "
 ScrollBox="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.LeftShadowBrush\" \"Object.Style.WidgetBarStyle\" \"Object.Render Transform.RenderTransform\" "
-WBP_ContentSelectionButton_C=
+WBP_ContentSelectionButton_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+WBP_ContentSelectionBox_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+SContentSelectionBoxWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
@@ -5599,26 +5623,26 @@ RecentlyPlaced=/Script/Engine.SphereReflectionCapture;/Engine/Transient.ActorFac
 RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/UI/WBP_LevelSelectMenu
-MRUItem1=/Game/UI/WBP_LevelSelectionBox
+MRUItem0=/Game/UI/WBP_LevelSelectionBox
+MRUItem1=/Game/UI/NewBlueprint
 MRUItem2=/Game/UI/WBP_ContentSelectionButton
-MRUItem3=/Game/UI/WBP_LevelSelectionButton
-MRUItem4=/Game/Level/MainMenu
-MRUItem5=/Game/GameModes/BP_TestGameMode
-MRUItem6=/Game/Level/maps/MainMenu
-MRUItem7=/Game/Level/maps/FloatingIsland
-MRUItem8=/Game/Level/maps/Wimbledon
-MRUItem9=/Game/Level/maps/Blockout
-MRUItem10=/Game/Level/maps/VoidMap
-MRUItem11=/Game/Level/maps/Blockout_P
-MRUItem12=/Game/Level/maps/TestMap
-MRUItem13=/Game/UI/WBP_MainMenu
-MRUItem14=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
-MRUItem15=/Game/Objects/TrackerBot/BP_TrackerBot
-MRUItem16=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
-MRUItem17=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
-MRUItem18=/Game/Objects/Characters/BP_PlayerPawn
-MRUItem19=/Game/Objects/Projectiles/BP_GrenadeProjectile
+MRUItem3=/Game/UI/WBP_ContentSelectionBox
+MRUItem4=/Game/UI/WBP_LevelSelectMenu
+MRUItem5=/Game/UI/WBP_LevelSelectionButton
+MRUItem6=/Game/Level/MainMenu
+MRUItem7=/Game/GameModes/BP_TestGameMode
+MRUItem8=/Game/Level/maps/MainMenu
+MRUItem9=/Game/Level/maps/FloatingIsland
+MRUItem10=/Game/Level/maps/Wimbledon
+MRUItem11=/Game/Level/maps/Blockout
+MRUItem12=/Game/Level/maps/VoidMap
+MRUItem13=/Game/Level/maps/Blockout_P
+MRUItem14=/Game/Level/maps/TestMap
+MRUItem15=/Game/UI/WBP_MainMenu
+MRUItem16=/Game/Objects/Miscellaneous/ExplosiveBarrel/BP_ExplosiveBarrel
+MRUItem17=/Game/Objects/TrackerBot/BP_TrackerBot
+MRUItem18=/Game/Objects/Characters/AIPlayer/BP_MachineGun_AI
+MRUItem19=/Game/Objects/Characters/AIPlayer/BT_AIPlayer
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -5826,6 +5850,7 @@ Warning_CompileErrorsInMaterial=False
 Warning_NoPreviewMeshFound=False
 ExtrudeCoordsWarning=False
 ChangeVariableType_Warning=False
+DeleteVariableInUse_Warning=False
 
 [MaterialEditor]
 PrimType=1
